--- a/content/2015-03-04_zima-2014-2015.md
+++ b/content/2015-03-04_zima-2014-2015.md
@@ -4,20 +4,19 @@ Author: Zuzka
 
 
 Protože je březen a dlouho nevznikl žádný zápisek, tak tvořím přehled o
-uplynulém zimním období. Sněhu jsme si teda letos moc neužili, vrchol
-žižkovské nadílky je ale naštěstí zdokumentován do archivu... 
+uplynulém zimním období. Sněhu jsme si teda letos moc neužili, vrchol žižkovské
+nadílky je ale naštěstí zdokumentován do archivu... 
 
 ![obrázek]({filename}/images/tumblr_inline_nkpgqsEPZe1t37x0f.jpg)
 
-Abych to vzala popořádku: Vánoce se nesly převážně v duchu Honzova
-jetlegu, protože ještě cca 5 dní po příletu ze SF byl celkem
-nepoužitelný. Trochu za to mohlo i dlouhé čekání na batoh zaseknutý v
-Amsterdamu, kvůli kterému jsme šli ten den pozdě spát. Svátky jsme pak
-strávili v Tečovicích, kde jsme stihli vidět (a prospat) Rybovku, zajít
-do Dobré čajovny, udělat pár procházek po okolí a zajet na výlet do
-aquaparku v Uherském Hradišti se zastávkou na Velehradě. Tam jsme shodou
-okolností zažili asi největší kosu za celou zimu, i když to na fotkách
-nevypadá.  
+Abych to vzala popořádku: Vánoce se nesly převážně v duchu Honzova jetlegu,
+protože ještě cca 5 dní po příletu ze SF byl celkem nepoužitelný. Trochu za to
+mohlo i dlouhé čekání na batoh zaseknutý v Amsterdamu, kvůli kterému jsme šli
+ten den pozdě spát. Svátky jsme pak strávili v Tečovicích, kde jsme stihli vidět
+(a prospat) Rybovku, zajít do Dobré čajovny, udělat pár procházek po okolí a
+zajet na výlet do aquaparku v Uherském Hradišti se zastávkou na Velehradě. Tam
+jsme shodou okolností zažili asi největší kosu za celou zimu, i když to na
+fotkách nevypadá.  
 
 ![obrázek]({filename}/images/tumblr_inline_nkpeib6Na01t37x0f.jpg)
 
@@ -25,38 +24,37 @@ nevypadá.
 
 ![obrázek]({filename}/images/tumblr_inline_nkpem5qOUT1t37x0f.jpg)
 
-Potom jsme se přes Olomouc vydali do Brna oslavit námořnický silvestr.
-Ten se opravdu vyvedl, jak kostýmy, tak kuchyně byly parádní. O půlnoci
-jsme pouštěli lampióny štěstí. Jediné mínusy: Honza ztracen na Kraváku a
-moje již tradiční novoroční nevolnost. K nezaplacení!  
+Potom jsme se přes Olomouc vydali do Brna oslavit námořnický silvestr. Ten se
+opravdu vyvedl, jak kostýmy, tak kuchyně byly parádní. O půlnoci jsme pouštěli
+lampióny štěstí. Jediné mínusy: Honza ztracen na Kraváku a moje již tradiční
+novoroční nevolnost. K nezaplacení!  
 
 ![obrázek]({filename}/images/tumblr_inline_nkpemc5H5z1t37x0f.jpg)
 
 ![obrázek]({filename}/images/tumblr_inline_nkpeoqSXRq1t37x0f.jpg)
 
-Leden se nesl spíše v duchu nemocí, takže jsme nicmoc zajímavého
-nepodnikli, ale měli jsme tu alespoň nějaké návštěvníky. V únoru už to
-bylo lepší, naplánovali jsme si týden plný zážitků v Brně, kde nás
-ubytovali manželia Bakešovci. Nakonec to bylo hodně deskovkové - Peno
-nás naučil hrát Le Havre a taky jsme si to v čajovně rozdali v
-Osadnících s místním přeborníkem. Já jsem pobyt zakončila bohužel
-předčasně kvůli chřipce. :( Honza ještě koučoval workshop Django girls.  
+Leden se nesl spíše v duchu nemocí, takže jsme nicmoc zajímavého nepodnikli, ale
+měli jsme tu alespoň nějaké návštěvníky. V únoru už to bylo lepší, naplánovali
+jsme si týden plný zážitků v Brně, kde nás ubytovali manželia Bakešovci. Nakonec
+to bylo hodně deskovkové - Peno nás naučil hrát Le Havre a taky jsme si to v
+čajovně rozdali v Osadnících s místním přeborníkem. Já jsem pobyt zakončila
+bohužel předčasně kvůli chřipce. :( Honza ještě koučoval workshop Django girls.  
 
-Na Valentýna jsme se dali nějak dopořádku a zvládli jsme v jeden den
-absolvovat vsetínský Barcamp ve Zlíně a večer ještě myslivecký ples, kde
-jsme mimo jiné obdivovali DJ se stylem ala
-[Lionel](https://www.facebook.com/vpredubyznysvzaduparty?fref=ts). Ten
-nás oslnil skvělou interpretací písně Ještěže tě lásko mám. Jinak nás
-ale hudba k tanci moc nesváděla, vínko bylo naštěstí dobré.  
+Na Valentýna jsme se dali nějak dopořádku a zvládli jsme v jeden den absolvovat
+vsetínský Barcamp ve Zlíně a večer ještě myslivecký ples, kde jsme mimo jiné
+obdivovali DJ se stylem ala
+[Lionel](https://www.facebook.com/vpredubyznysvzaduparty?fref=ts). Ten nás
+oslnil skvělou interpretací písně Ještěže tě lásko mám. Jinak nás ale hudba k
+tanci moc nesváděla, vínko bylo naštěstí dobré.  
 
 ![obrázek]({filename}/images/tumblr_inline_nkpfknR2tQ1t37x0f.jpg)
 
-Jediný skutečně pražský zážitek se týká víkendové procházky z Libně do
-Tróje. Cestou toho bylo k vidění poměrně dost, Libeňský zámeček
-(radnice), doky, lodě, protipovodňová vrata, Bílá skála, choroše,
-bezdomovecké příbytky, mosty, umělý kanál pro vodní slalom, trojský kůň,
-zámek Trója a vinice a spousta infocedulí. Nakonec jsme prošli přes
-Stromovku k výstavišti a planetáriu a to byl konec pěkného výletu. 
+Jediný skutečně pražský zážitek se týká víkendové procházky z Libně do Tróje.
+Cestou toho bylo k vidění poměrně dost, Libeňský zámeček (radnice), doky, lodě,
+protipovodňová vrata, Bílá skála, choroše, bezdomovecké příbytky, mosty, umělý
+kanál pro vodní slalom, trojský kůň, zámek Trója a vinice a spousta infocedulí.
+Nakonec jsme prošli přes Stromovku k výstavišti a planetáriu a to byl konec
+pěkného výletu. 
 
 ![obrázek]({filename}/images/tumblr_inline_nkpg9cCb5b1t37x0f.jpg)
 
