--- a/content/2016-09-18_80s-orlicky.md
+++ b/content/2016-09-18_80s-orlicky.md
@@ -1,10 +1,10 @@
-﻿Title: 80s Orličky (říjen 2015)
+﻿Title: Children of the 80s Orličky (říjen 2015)
 Date: 2016-09-18 14:33:00
 Modified: 2016-09-18 14:33:00
 Author: Zuzka
 
 
-Honzova brněnská gympl grupa pořádá pravidelné párty na chalupě v Orličkách a tentokrát jsme nechyběli. Párty byla ve stylu 80s, takže jsme se náležitě připravili a hurá do Orliček! Po první divoké noci plné diskotékových vypalovaček jsme zvládli vylézt i na nejbližší kopec, akorát zpátky dolů už jsme se vraceli za tmy. I druhý večer byl velmi výživný. :)
+Honzova brněnská gympl grupa pořádá pravidelné párty na chalupě v Orličkách a tentokrát jsme nechyběli. Párty byla ve stylu Children of the 80s, takže jsme se náležitě připravili a hurá do Orliček! Po první divoké noci plné diskotékových vypalovaček jsme zvládli vylézt i na nejbližší kopec, akorát zpátky dolů už jsme se vraceli za tmy. I druhý večer byl velmi výživný. :)
 
 ![image description]({filename}/images/a.jpg){:width="250px" :center}
 
