--- a/content/2017-02-12_zima-2015-2016.md
+++ b/content/2017-02-12_zima-2015-2016.md
@@ -7,20 +7,98 @@ Author: Zuzka
 Vzpomínky na zimu sepisuji až s ročním zpožděním, takže to bude výběr hlavně na základě fotoarchivu.
 Vánoční volno jsme si užili hlavně relaxem v Tečovicích, zatímco Silvestr ve stylu byznysmenů jsme oslavili díky Peťovi v brněnských STRV prostorech. 
 
-Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli klokani z Austrálie a měli jsme se všichni sejít v Toušeni. Bohužel však děti v Toušeni zrovna postihly neštovice, kvůli kterým jsme sešlost museli zrušit. My s Honzou jsme se tedy sešli s klokany u babičky a dědy v Olomouci a bylo to moc fajn. Těším se, až se někdy ta Javorko-sešlost podaří uskutečnit a jsem zvědavá, kdy to asi tak bude. Toušeňské jsme navštívili až dodatečně, Stela se bohužel zrovna zase rozestonala, ale s Lukášem jsme si užili čerstvě napadený sníh. 
+![image description]({filename}/images/silvestr strv.jpg)
+
+![image description]({filename}/images/silvestr strv 2.jpg)
+
+Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli klokani z Austrálie a měli jsme se všichni sejít v Toušeni. Bohužel však děti v Toušeni zrovna postihly neštovice, kvůli kterým jsme sešlost museli zrušit. My s Honzou jsme se tedy sešli s klokany u babičky a dědy v Olomouci a bylo to moc fajn. Těším se, až se někdy ta Javorko-sešlost podaří uskutečnit a jsem zvědavá, kdy to asi tak bude. Toušenské jsme navštívili až dodatečně, Stela se bohužel zrovna zase rozestonala, ale s Lukášem jsme si užili čerstvě napadený sníh. 
+
+![image description]({filename}/images/p1260479.jpg)
+
+![image description]({filename}/images/p1260481.jpg)
+
+![image description]({filename}/images/p1260482.jpg)
+
 Aby dětí po Novém roce nebylo málo, na dálku jsme na pražském Pyvu oslavili narození malé Niny Bakešovic, která od té doby úspěšně plní v našem spolku roli "reklamy na dítě". 
+
+![image description]({filename}/images/2016-01-20 21.50.12.jpg)
 
 V lednu jsme za slunného počasí vyjeli z Prahy na víkendový výlet do Litoměřic, města Karla Hynka Máchy. Ubytovali jsme se v sympatickém penzionu Dubina, kde jsme z pokoje v patře měli vynikající výhled na věžičky v historickém centru. První den jsme prošli jen kousek města a měli jsme nečekaný gastronomický zážitek v hospodě Labuť s vynikajícími žebry a pivíčkem. Přitom jsme dlouho nemohli najít hospodu, kam bychom se vešli, zjevně to tam v noci dost žije. 
 
-Druhý den jsme se po snídani vydali na místní kopec s rozhlednou, která slibovala skvělou vyhlídku. Bohužel informace o otevírací době rozhledny na internetu neodpovídaly realitě, a tak jsme se na rozhlednu nedostali. Místo toho jsme tedy obkroužili vrcholek kopce a pak se opět vydali dolů do centra města, které jsme prochodili křížem krážem, užili jsme si hlavně historické náměstí a hezky udržovaný park v okolí hradu. 
+![image description]({filename}/images/p1260485.jpg)
 
-Po obědě jsme se rozhodli udělat si pěší tůru do Terezína. Nakonec nám to celé zabralo víc času, než jsme mysleli, a tak jsme nestihli ani otevírací dobu pevnosti v Terezíně. Prošli jsme si tedy alespoň to, co šlo. Když pomalu nastal čas vyrazit zpět do Prahy, autobus nám ujel přesně před nosem, protože jsme stáli u zastávky akorát na druhé straně silnice. Nechtělo se nám čekat víc než hodinu na další bus a tak jsme se rozhodli výlet si ještě prodloužit a vyrazili jsme pěšky po stezce kolem vodního příkopu na vlak do Bohušovic nad Ohří. Nachodili jsme toho teda fakt hodně a do Bohušovic jsme došli už za úplné tmy. 
+![image description]({filename}/images/p1260489.jpg)
+
+![image description]({filename}/images/p1260490.jpg)
+
+![image description]({filename}/images/p1260510.jpg)
+
+![image description]({filename}/images/2016-01-30 18.56.01.jpg)
+
+Druhý den jsme se po snídani vydali na místní kopec s rozhlednou, která slibovala skvělou vyhlídku. Bohužel informace o otevírací době rozhledny na internetu neodpovídaly realitě, a tak jsme se na rozhlednu nedostali. Místo toho jsme tedy obkroužili vrcholek kopce a pak se opět vydali dolů do centra města, které jsme prochodili křížem krážem, užili jsme si celou histirickou část města a hezky udržovaný park v okolí hradu. 
+
+![image description]({filename}/images/p1260499.jpg)
+
+![image description]({filename}/images/p1260500.jpg)
+
+![image description]({filename}/images/p1260502.jpg)
+
+![image description]({filename}/images/2016-01-31 13.31.29.jpg)
+
+![image description]({filename}/images/p1260512.jpg)
+
+![image description]({filename}/images/p1260513.jpg)
+
+![image description]({filename}/images/p1260518.jpg)
+
+![image description]({filename}/images/p1260532.jpg)
+
+![image description]({filename}/images/p1260537.jpg)
+
+![image description]({filename}/images/p1260547.jpg)
+
+![image description]({filename}/images/p1260550.jpg)
+
+Po obědě jsme se rozhodli udělat si pěší tůru do Terezína. Nakonec nám to celé zabralo víc času, než jsme mysleli, a tak jsme nestihli ani otevírací dobu pevnosti v Terezíně. Prošli jsme si tedy alespon to, co šlo. Když pomalu nastal čas vyrazit zpět do Prahy, autobus nám ujel přesně před nosem, protože jsme stáli u zastávky akorát na druhé straně silnice. Nechtělo se nám čekat víc než hodinu na další bus a tak jsme se rozhodli výlet si ještě prodloužit a vyrazili jsme pěšky po stezce kolem vodního příkopu na vlak do Bohušovic nad Ohří. Nachodili jsme toho teda fakt hodně a do Bohušovic jsme došli už za úplné tmy. 
+
+![image description]({filename}/images/p1260553.jpg)
+
+![image description]({filename}/images/p1260563.jpg)
+
+![image description]({filename}/images/p1260564.jpg)
+
+![image description]({filename}/images/p1260569.jpg)
 
 Začátkem února jsme opět vyrazili do Tečovic, tentokrát jsme se všichni vypravili na ples s názvem Hvězdná noc do sousedních Sazovic, kde jsme se potkali i s Tomem Drabem a jeho přítelkyní Aničkou. Hvězdná noc se nesla hlavně ve znamení dvojitého oznámení zásnub, takže je pro naši rodinu navždy nezapomenutelná a moc jsme si to užili. 
 
-V dalších dnech jsme se společně s mamkou vydali nejdřív na menší výlet do Malenovického lesa na místo, kterému se říká U sv. vody podle místního pramene, a o pár dní později jsme vyjeli na větší výpravu, a to na procházku z Trojáku na Tesák. Vylezli jsme nejdřív na rozhlednu na Trojáku, pak jsme šli pěšmo hledat pramen Moravy, ale to byla kvůli zmrzlému terénu trochu divočejší cesta. Cestou jsme potkali taky partyzánské bunkry, které bychom samozřejmě bez značek nikdy neobjevili. Nakonec jsme došli až na Tesák do hospůdky, kde naše výprava končila. 
+![image description]({filename}/images/2016-02-05 22.24.03.jpg)
+
+![image description]({filename}/images/2016-02-05 23.32.14.jpg)
+
+![image description]({filename}/images/12710758_1011037602301273_6303813618732125241_o.jpg)
+
+V dalších dnech jsme se společně s mamkou vydali nejdřív na menší výlet do Malenovického lesa na místo, kterému se říká U sv. vody podle místního pramene. 
+
+![image description]({filename}/images/p1260574.jpg)
+
+![image description]({filename}/images/p1260578.jpg)
+
+![image description]({filename}/images/p1260584.jpg)
+
+A o pár dní později jsme vyjeli na větší výpravu, a to na procházku z Trojáku na Tesák. Vylezli jsme nejdřív na rozhlednu na Trojáku, pak jsme šli pěšmo hledat pramen Moravy, ale to byla kvůli zmrzlému terénu trochu divočejší cesta. Cestou jsme potkali taky partyzánské bunkry, které bychom samozřejmě bez značek nikdy neobjevili. Nakonec jsme došli až na Tesák do hospůdky, kde naše výprava končila. 
+
+![image description]({filename}/images/p1260617.jpg)
+
+![image description]({filename}/images/p1260634.jpg)
+
+![image description]({filename}/images/p1260623.jpg)
+
+![image description]({filename}/images/p1260629.jpg)
+
+![image description]({filename}/images/p1260632.jpg)
+
+![image description]({filename}/images/p1260637.jpg)
+
+![image description]({filename}/images/p1260641.jpg)
 
 Poslední velká událost zimní sezóny - lyžovačka v Bormiu - si vysloužila samostatný příspěvek na blogu, takže o tom až příště. 
-
-
-
