Publishing :blue_book:

--- a/content/2017-02-12_zima-2015-2016.md
+++ b/content/2017-02-12_zima-2015-2016.md
@@ -7,9 +7,9 @@ Author: Zuzka
 Vzpomínky na zimu sepisuji až s ročním zpožděním, takže to bude výběr hlavně na základě fotoarchivu.
 Vánoční volno jsme si užili hlavně relaxem v Tečovicích, zatímco Silvestr ve stylu byznysmenů jsme oslavili díky Peťovi v brněnských STRV prostorech. 
 
-![image description]({filename}/images/silvestr strv.jpg)
+![image description]({filename}/images/silvestr_strv.jpg)
 
-![image description]({filename}/images/silvestr strv 2.jpg)
+![image description]({filename}/images/silvestr_strv_2.jpg)
 
 Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli klokani z Austrálie a měli jsme se všichni sejít v Toušeni. Bohužel však děti v Toušeni zrovna postihly neštovice, kvůli kterým jsme sešlost museli zrušit. My s Honzou jsme se tedy sešli s klokany u babičky a dědy v Olomouci a bylo to moc fajn. Těším se, až se někdy ta Javorko-sešlost podaří uskutečnit a jsem zvědavá, kdy to asi tak bude. Toušenské jsme navštívili až dodatečně, Stela se bohužel zrovna zase rozestonala, ale s Lukášem jsme si užili čerstvě napadený sníh. 
 
