--- a/content/2017-02-12_zima-2015-2016.md
+++ b/content/2017-02-12_zima-2015-2016.md
@@ -11,7 +11,7 @@ Vánoční volno jsme si užili hlavně relaxem v Tečovicích, zatímco Silvest
 
 ![image description]({filename}/images/silvestr_strv_2.jpg)
 
-Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli klokani z Austrálie a měli jsme se všichni sejít v Toušeni. Bohužel však děti v Toušeni zrovna postihly neštovice, kvůli kterým jsme sešlost museli zrušit. My s Honzou jsme se tedy sešli s klokany u babičky a dědy v Olomouci a bylo to moc fajn. Těším se, až se někdy ta Javorko-sešlost podaří uskutečnit a jsem zvědavá, kdy to asi tak bude. Toušenské jsme navštívili až dodatečně, Stela se bohužel zrovna zase rozestonala, ale s Lukášem jsme si užili čerstvě napadený sníh. 
+Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli klokani z Austrálie a měli jsme se všichni sejít v Toušeni. Bohužel však děti v Toušeni zrovna postihly neštovice, kvůli kterým jsme sešlost museli zrušit. My s Honzou jsme se tedy sešli s klokany u babičky a dědy v Olomouci a bylo to moc fajn. Těším se, až se někdy ta Javorko-sešlost podaří uskutečnit a jsem zvědavá, kdy to asi tak bude. Toušeňské jsme navštívili až dodatečně, Stela se bohužel zrovna zase rozestonala, ale s Lukášem jsme si užili čerstvě napadený sníh. 
 
 ![image description]({filename}/images/p1260479.jpg)
 
@@ -21,7 +21,7 @@ Těšili jsme se na plánovanou Javorko-sešlost, protože do ČR přiletěli kl
 
 Aby dětí po Novém roce nebylo málo, na dálku jsme na pražském Pyvu oslavili narození malé Niny Bakešovic, která od té doby úspěšně plní v našem spolku roli "reklamy na dítě". 
 
-![image description]({filename}/images/2016-01-20 21.50.12.jpg)
+![image description]({filename}/images/2016-01-20_21.50.12.jpg)
 
 V lednu jsme za slunného počasí vyjeli z Prahy na víkendový výlet do Litoměřic, města Karla Hynka Máchy. Ubytovali jsme se v sympatickém penzionu Dubina, kde jsme z pokoje v patře měli vynikající výhled na věžičky v historickém centru. První den jsme prošli jen kousek města a měli jsme nečekaný gastronomický zážitek v hospodě Labuť s vynikajícími žebry a pivíčkem. Přitom jsme dlouho nemohli najít hospodu, kam bychom se vešli, zjevně to tam v noci dost žije. 
 
@@ -33,7 +33,7 @@ V lednu jsme za slunného počasí vyjeli z Prahy na víkendový výlet do Litom
 
 ![image description]({filename}/images/p1260510.jpg)
 
-![image description]({filename}/images/2016-01-30 18.56.01.jpg)
+![image description]({filename}/images/2016-01-30_18.56.01.jpg)
 
 Druhý den jsme se po snídani vydali na místní kopec s rozhlednou, která slibovala skvělou vyhlídku. Bohužel informace o otevírací době rozhledny na internetu neodpovídaly realitě, a tak jsme se na rozhlednu nedostali. Místo toho jsme tedy obkroužili vrcholek kopce a pak se opět vydali dolů do centra města, které jsme prochodili křížem krážem, užili jsme si celou histirickou část města a hezky udržovaný park v okolí hradu. 
 
@@ -43,7 +43,7 @@ Druhý den jsme se po snídani vydali na místní kopec s rozhlednou, která sli
 
 ![image description]({filename}/images/p1260502.jpg)
 
-![image description]({filename}/images/2016-01-31 13.31.29.jpg)
+![image description]({filename}/images/2016-01-31_13.31.29.jpg)
 
 ![image description]({filename}/images/p1260512.jpg)
 
@@ -71,9 +71,9 @@ Po obědě jsme se rozhodli udělat si pěší tůru do Terezína. Nakonec nám 
 
 Začátkem února jsme opět vyrazili do Tečovic, tentokrát jsme se všichni vypravili na ples s názvem Hvězdná noc do sousedních Sazovic, kde jsme se potkali i s Tomem Drabem a jeho přítelkyní Aničkou. Hvězdná noc se nesla hlavně ve znamení dvojitého oznámení zásnub, takže je pro naši rodinu navždy nezapomenutelná a moc jsme si to užili. 
 
-![image description]({filename}/images/2016-02-05 22.24.03.jpg)
+![image description]({filename}/images/2016-02-05_22.24.03.jpg)
 
-![image description]({filename}/images/2016-02-05 23.32.14.jpg)
+![image description]({filename}/images/2016-02-05_23.32.14.jpg)
 
 ![image description]({filename}/images/12710758_1011037602301273_6303813618732125241_o.jpg)
 
