--- a/content/2017-02-12_zima-2015-2016.md
+++ b/content/2017-02-12_zima-2015-2016.md
@@ -23,7 +23,7 @@ Aby dětí po Novém roce nebylo málo, na dálku jsme na pražském Pyvu oslavi
 
 ![image description]({filename}/images/2016-01-20_21.50.12.jpg)
 
-V lednu jsme za slunného počasí vyjeli z Prahy na víkendový výlet do Litoměřic, města Karla Hynka Máchy. Ubytovali jsme se v sympatickém penzionu Dubina, kde jsme z pokoje v patře měli vynikající výhled na věžičky v historickém centru. První den jsme prošli jen kousek města a měli jsme nečekaný gastronomický zážitek v hospodě Labuť s vynikajícími žebry a pivíčkem. Přitom jsme dlouho nemohli najít hospodu, kam bychom se vešli, zjevně to tam v noci dost žije. 
+V lednu jsme za slunného počasí vyjeli z Prahy na víkendový výlet do Litoměřic, města Karla Hynka Máchy. Ubytovali jsme se v sympatickém penzionu Dubina, kde jsme z pokoje v patře měli vynikající výhled na věžičky v historickém centru. První den jsme prošli jen kousek města a měli jsme nečekaný gastronomický zážitek v minipivovaru Labuť s vynikajícími žebry a pivíčkem. Přitom jsme dlouho nemohli najít hospodu, kam bychom se vešli, zjevně to tam v noci dost žije. 
 
 ![image description]({filename}/images/p1260485.jpg)
 
@@ -85,7 +85,7 @@ V dalších dnech jsme se společně s mamkou vydali nejdřív na menší výlet
 
 ![image description]({filename}/images/p1260584.jpg)
 
-A o pár dní později jsme vyjeli na větší výpravu, a to na procházku z Trojáku na Tesák. Vylezli jsme nejdřív na rozhlednu na Trojáku, pak jsme šli pěšmo hledat pramen Moravy, ale to byla kvůli zmrzlému terénu trochu divočejší cesta. Cestou jsme potkali taky partyzánské bunkry, které bychom samozřejmě bez značek nikdy neobjevili. Nakonec jsme došli až na Tesák do hospůdky, kde naše výprava končila. 
+A o pár dní později jsme vyjeli na větší výpravu, a to na procházku z Trojáku na Tesák. Vylezli jsme nejdřív na rozhlednu na Trojáku, pak jsme šli pěšmo hledat pramen Dřevnice, ale to byla kvůli zmrzlému terénu trochu divočejší cesta. Cestou jsme potkali taky partyzánské bunkry, které bychom samozřejmě bez značek nikdy neobjevili. Nakonec jsme došli až na Tesák do hospůdky, kde naše výprava končila. 
 
 ![image description]({filename}/images/p1260617.jpg)
 
