Publishing :blue_book:

--- a/content/2017-02-19_bormio-brezen-2016.md
+++ b/content/2017-02-19_bormio-brezen-2016.md
@@ -8,7 +8,15 @@ Peťa Nohejl nás a Peťu Váchu nalákal na třídenní lyžařský zájezd do 
 
 Zatímco Peťové vyrazili odpoledne z Brna, my jsme večer nastupovali do autobusu v Praze na parkovišti u Hlavního nádraží. Čekalo tam společně s námi celkem dost lidí a když přijelo hned několik autobusů naráz, nastal tam slušný chaos. Nicméně nakonec jsme úspěšně vyjeli z Prahy a dokonce i do správné destinace. Autobusem jsme putovali přes noc, vybavili jsme se nafukovacími polštáři a já navíc kinedrilem, ale bus byl už staršího typu a neměli jsme tam nějak extra moc místa a pohodlí. Nicméně cestu jsme nějak zvládli a dopoledne jsme se vylodili přimo na parkovišti pod sjezdovkou v [Bormiu](http://www.bormioski.eu/en/skiing/ski-area/ski-map/). 
 
+![image description]({filename}/images/16.50.09.jpg)
+
 Celkem dlouho nám zabrala výprava do lyžařské výzbroje, než jsme konečně vyrazili na svah, ranní manžestr už jsme kvůli tomu nestihli. Nutno dodat, že první den nám počasí přálo a převládalo azuro na obloze. Seznamovali jsme se s jednotlivýma sjezdovkama a na oběd jsme zašli do obrovské samoobslužné restaurace přímo uprostřed skiareálu.
+
+![image description]({filename}/images/08.48.28.jpg)
+
+![image description]({filename}/images/16.19.06.jpg)
+
+![image description]({filename}/images/15.28.23.jpg)
 
 Po úvodní lyžovačce jsme se shromáždili u autobusu, který nás měl odvézt na hotel. Už jsme se dost těšili na pohodlnou postel a sprchu. Jenže pak začala teprve sranda. Dozvěděli jsme se, že lidi ze zájezdu jsou rozhození mezi 3 různé penziony. Pár šťastlivců bydlelo přímo u svahu, dvě skupiny pak ve městě v dalších 2 hotelech. Naše skupina vysedala až poslední a od autobusu jsme se ještě pěkný kus cesty táhli po svých, protože náš hotel Gufo byl přímo v jádru historické části města, kam bus nemohl zajet ani kdyby chtěl. Někteří naši spolupasažéři byli z toho pěkně nakrknutí, ale to nejlepší teprve přišlo. V Gufu totiž několik lidí bydlelo v hlavní budově a ostatní vč. Peťů schytali pokoje v jakési přístavbě. A tyhlety pokoje byly slušně řečeno v ne uplně dobrém stavu. Zejména tam byla spousta věcí starých, ošklivých a polorozbitých. Místo pokrývek takové jakoby sto let staré, na první pohled celkem hnusné deky. 
 
@@ -20,14 +28,40 @@ Druhý den ráno nás nemile šokovalo počasí, protože přes noc napadl snad 
 
 Cosi jsme v tom "odlyžovali" a na oběd jsme se rozhodli vyzkoušet zapadlou krčmu za vrcholkem kopce. A to byla rozhodně dobrá volba, protože na tuto restauraci všichni vzpomínáme s láskou. Uprostřed interiéru byl zavěšený krb sálající příjemným teplem, lidi kromě nás skoro žádní, atmosféru dolaďovala chill-out hudba, dokonce jsme tam našli česky mluvící obsluhu. Vzhledem k pokračující chumelenici jsme rozhodně ven nespěchali, dali jsme si tam ještě i kafíčko a relaxovali. Byl to pro mě hodně silný zážitek, hlavně to dělal asi ten kontrast bílého sněhového pekla venku a tepla krbu a pohody vevnitř. 
 
+![image description]({filename}/images/14.20.11.jpg)
+
+![image description]({filename}/images/11.50.34.jpg)
+
+![image description]({filename}/images/12.09.34.jpg)
+
+![image description]({filename}/images/13.16.14.jpg)
+
+![image description]({filename}/images/16.42.45.jpg)
+
 Nakonec jsme se nějak odhodlali zkusit ještě něco málo odlyžovat, ale počasí se nevylepšilo, takže bílá chumelenice nás provázela i při čekání na bus zpět do Bormia. Po večeři jsem já odpadla, protože jsem nebyla úplně zdravotně fit, ale kluci se vydali ještě do nočního města nasát jeho atmosféru malebných historických uliček. Pak jsme dali na pokoji italské vínko na dobrou noc a šli do hajan.
+
+![image description]({filename}/images/21.07.53.jpg)
+
+![image description]({filename}/images/21.19.35.jpg)
 
 Třetí den jsme po snídani vyrazili opět na svah v Bormiu, kam nás dovezl místní slušně fungující skibus. Počasí se naštěstí umoudřilo, takže jsme si hezky zalyžovali, akorát Peťa Vácha měl nějaké natažené svaly a už se trochu šetřil. Oběd v samoobslužné restauraci byl poněkud stres oproti předchozímu dni, restaurant byl totiž narvaný k prasknutí hlučnými italskými dětmi, které měly ten den na svahu nějaké závody. Nicméně kávičku jsme si užili už v klidu, když jsme vyjeli velkou kabinovou lanovkou až na horní vrcholek kopce ve 3000 m n.m. Výhledy odtud byly opravdu skvostné. 
 
+![image description]({filename}/images/12.17.35.jpg)
+
+![image description]({filename}/images/15.28.31.jpg)
+
+![image description]({filename}/images/15.08.13.jpg)
+
 Co nám síly umožnily, to jsme ještě poslední den odlyžovali, než jsme se vydali zpět do hotelu. Tam už jsme všichni měli věci zabalené a vyklizené do společenské místnosti. Nicméně, kluci překonali strach z Pekelníka a zařídili nám možnost se osprchovat a převléct v jednom z volných pokojů. Protože jsme se dozvěděli, že odjezd s cestovkou bude opožděn, vydali jsme se ještě do města najít nějakou restauraci, kde si dáme dobrou večeři, a to se nám podařilo. Interiér té restaurace byl správně obskurní - byl to mišmaš uplně všeho, co se dá označit za dekorační prvek. Ale najedli jsme se dobře, levně a samozřejmě jsme nezapomněli ani na skleničku vína na rozloučenou s Bormiem. 
+
+![image description]({filename}/images/11.34.40.jpg)
+
+![image description]({filename}/images/11.35.04.jpg)
+
+![image description]({filename}/images/12.28.34.jpg)
+
+![image description]({filename}/images/16.39.44.jpg)
 
 Pak už následovalo nalodění do autobusu a hurá domů. Cesta zpátky byla celkem náročná, nedařilo se nám moc spát a tak jsme dojeli hodně rozlámaní. Humorní byli jedni naši spolupasažéři - taková dvojice namachrovaných borečků, kteří hned na úvod cesty vypili v rychlém sledu asi hodně limonády a piva a pak se jim strašně chtělo na záchod. Jenže autobus zrovna jel dlouhatánskou pasáž, kde se proplétal po úzké serpentinové cestě a rozhodně nemohl nikde zastavit. Borci se tam pak svíjeli v mukách a asi tak 20 minut vkuse pro sebe mumlali nadávky na řidiče ve stylu "jestli okamžitě nezastavíš, tak tě zabiju." Když konečně řidič našel plácek na zastavení, tak vyběhli ven jak blesk. :D 
 
 Cestou do ČR jsme projížděli dlouhým jednosměrným [tunelem](https://en.wikipedia.org/wiki/Munt_la_Schera_Tunnel) mezi Itálií a Švýcarskem, ale ten si užil hlavně Honza, neb já jsem měla zrovna vzácnou chvilku spánku. Po příjezdu do Prahy někdy kolem páté ráno jsme byli rádi, že jsme se s bagáží dovlekli domů a ještě jsme si dopřáli pár hodin šlofíka v posteli, místo abychom třeba šli do práce, jak jsme původně (naivně) zamýšleli.  
-
-
